examples/kubernetes/microlith.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: couchbase-grafana
spec:
  selector:
    matchLabels:
      run: couchbase-grafana
  replicas: 1
  template:
    metadata:
      labels:
        run: couchbase-grafana
    spec:
      containers:
      - name: couchbase-grafana
        image: couchbase-observability:v1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: couchbase-grafana
  labels:
    run: couchbase-grafana
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: couchbase-grafana
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: couchbase-grafana
            port:
              number: 8080
